unpackaged/main/default/objects/Opportunity/fields/Admissions_Approver__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admissions Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>