unpackaged/main/default/objects/Opportunity/fields/Admissions_Director__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admissions Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DOA_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>