unpackaged/main/default/objects/Opportunity/fields/Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Type__c</fullName>
    <label>Consultation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campus Visit</fullName>
            </value>
            <value>
                <fullName>Phone Consultation</fullName>
            </value>
            <value>
                <fullName>Virtual Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>