unpackaged/main/default/objects/Opportunity/fields/Enrollment_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Agreement_Date__c</fullName>
    <label>Enrollment Agreement Date</label>
    <type>Date</type>
</CustomField>