unpackaged/main/default/objects/Opportunity/fields/FIN_GI_Bill_VOC__c.field-meta.xml
<CustomField>
    <fullName>FIN_GI_Bill_VOC__c</fullName>
    <label>Military Benefit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chapter 33 (Post 9/11)</fullName>
            </value>
            <value>
                <fullName>Chapter 30 (Montgomery)</fullName>
            </value>
            <value>
                <fullName>Chapter 31 (VR&amp;E)</fullName>
            </value>
            <value>
                <fullName>SkillBridge</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>