unpackaged/main/default/objects/Opportunity/fields/FIN_Total_Loan_Amt__c.field-meta.xml
<CustomField>
    <fullName>FIN_Total_Loan_Amt__c</fullName>
    <label>Total Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>