unpackaged/main/default/objects/Opportunity/fields/FIN_TuitionOpt__c.field-meta.xml
<CustomField>
    <fullName>FIN_TuitionOpt__c</fullName>
    <label>Tuition Financing Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Aid</fullName>
            </value>
            <value>
                <fullName>VA Benefits</fullName>
            </value>
            <value>
                <fullName>Cash / Self-Pay</fullName>
            </value>
            <value>
                <fullName>Private Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>