unpackaged/main/default/objects/Opportunity/fields/Financial_Counselor__c.field-meta.xml
<CustomField>
    <fullName>Financial_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FC_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>