unpackaged/main/default/objects/Opportunity/fields/Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Entity__c</fullName>
    <label>Sage Intacct Legal Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>