unpackaged/main/default/objects/Opportunity/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program of Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>