unpackaged/main/default/objects/Opportunity/fields/Program_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Program_of_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program of Interest</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>