unpackaged/main/default/objects/Opportunity/fields/School_Program__c.field-meta.xml
<CustomField>
    <fullName>School_Program__c</fullName>
    <label>Cohort Offering Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>