unpackaged/main/default/objects/Opportunity/fields/Target_Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Target_Academic_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Academic Term</label>
    <referenceTo>LearningProgram</referenceTo>
    <relationshipLabel>Opportunities (Target Academic Term)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>