unpackaged/main/default/objects/Opportunity/recordTypes/Student_Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Student_Enrollment</fullName>
    <active>true</active>
    <businessProcess>Admissions Recruitment Pipeline</businessProcess>
    <label>Student Enrollment</label>
</RecordType>